--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@
   font-weight: 600;
   font-size: 20px;
   text-align: center;
+  color: #000;
 }
 
 .nav__btn {
@@ -364,4 +365,26 @@
   font-weight: bolder;
   color: #EC6B1E;
   margin: 0;
+}
+
+.carousel-inner {
+  height: 538px;
+}
+
+.carousel-control-prev {
+  height: 50px;
+  left: unset !important;
+  /*position: fixed !important;*/
+  top: -5px !important;
+  right: 50%;
+  color: gray !important;
+}
+
+.carousel-control-next {
+  height: 50px;
+  right: unset !important;
+  /*position: fixed !important;*/
+  top: -5px !important;
+  left: 50%;
+  color: gray !important;
 }
