--- a/src/App.css
+++ b/src/App.css
@@ -307,6 +307,13 @@
   width: 25%;
   display: flex;
   flex-direction: column;
+  position: fixed;
+  left: 60%;
+  top: 15%;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: gray;
+  border: black solid 1px;
 }
 .main-right h1{
   font-weight: bolder;
