--- a/src/pages/AboutUs/AboutUs.css
+++ b/src/pages/AboutUs/AboutUs.css
@@ -43,7 +43,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px 0;
+    padding: 0 0  30px 0;
     border-radius: 15px;
 }
 
@@ -326,3 +326,83 @@ body {
     font-weight: bolder;
 }
 
+.feedback-form-container {
+    background-color: #212138;
+    color: white;
+    padding: 2% 5%;
+    border-radius: 8px;
+    max-width: 70%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.feedback-title {
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.feedback-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.feedback-button {
+    background-color: #ff6c00;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 25%;
+}
+
+.feedback-button.active {
+    background: white;
+    color: black;
+    border: 1px solid #ff6c00;
+}
+
+.rating-stars {
+    display: flex;
+    justify-content: center;
+    /*margin-bottom: 20px;*/
+}
+
+.star {
+    font-size: 24px;
+    color: orange;
+}
+
+.star.half {
+    color: white;
+    position: relative;
+}
+
+.star.half::before {
+    color: orange;
+    position: absolute;
+    width: 50%;
+    overflow: hidden;
+}
+
+.feedback-textarea {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    /*margin-bottom: 20px;*/
+}
+
+.feedback-submit-button {
+    background-color: #ff6c00;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 10%;
+}
